# yusafCut

./: .gitignore  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  HOW_TO_RUN.md  LICENSE  README.md  SECURITY.md  build.sh  dev.sh  eslint.config.js  index.html  package-lock.json  package.json  scribe-spec.md  tailwind.config.js  tsconfig.json  tsconfig.tsbuildinfo  vite.config.ts  vite.config.ts.timestamp-1779245502503-bcbbc5e5ce206.mjs  vite.config.ts.timestamp-1779360813882-0229ba31205ac.mjs
.claude/: settings.local.json
.github/: CODEOWNERS  FUNDING.yml
.github/workflows/: ci.yml  release.yml
docs/: ROADMAP.md  architecture.md  manual-test.md  yusafcut-spec.md
scripts/: build-mas.sh  build-production.sh  build-whisperkit-cli.sh  create-xcarchive.sh  dev.sh  release-dmg.sh  setup.sh  sidecar-dev.sh
sidecars/mlx-llm/: README.md  build.py  pyproject.toml
sidecars/mlx-llm/mlx_llm/: __init__.py  __main__.py  commands.py  schemas.py  server.py
sidecars/mlx-llm/tests/: test_commands.py  test_server.py
src/: App.tsx
src-tauri/: Cargo.toml  Entitlements.plist  EntitlementsHelper.plist  Info.plist  tauri.conf.json  tauri.mas.conf.json
src-tauri/binaries/: README.md  fetch.sh  mlx-sidecar-aarch64-apple-darwin  whisperkit-cli-aarch64-apple-darwin
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: edl.rs  export_state.rs  jobs.rs  lib.rs  llm.rs  main.rs  media.rs  project.rs  recording_state.rs  smart_cut.rs  snapshots.rs  transcribe.rs
src-tauri/src/commands/: export.rs  jobs.rs  llm.rs  media.rs  misc.rs  mod.rs  project.rs  snapshots.rs  transcribe.rs
src/hooks/: useAutoSave.ts  useKeyboardShortcuts.ts  useTranscribeProgress.ts  useVideoFrameClock.ts
src/lib/: captions.ts  edl.ts  ipc.ts  timecode.ts  transcriptCache.ts  utils.ts
tests/: captions.test.ts  edl.test.ts  timecode.test.ts
(+21 files in other folders)
