[project]
name = "mlx-llm"
version = "1.0.0"
description = "MLX-powered LLM sidecar for YusafCut — runs fully on-device via Apple MLX"
requires-python = ">=3.11"
dependencies = [
    "mlx-lm>=0.19",
    "pydantic>=2.7",
]

[project.scripts]
mlx-llm = "mlx_llm.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["mlx_llm"]
